--- a/public/assignment/client/views/profile/profile.view.html
+++ b/public/assignment/client/views/profile/profile.view.html
@@ -16,13 +16,13 @@
               <div class="form-group">
                 <label for="firstName" class="col-sm-2 control-label">First Name</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" id="firstName" placeholder="First Name" ng-model="user.firstname">
+                  <input type="text" class="form-control" id="firstName" placeholder="First Name" ng-model="user.firstName">
                 </div>
               </div>
               <div class="form-group">
                 <label for="lastName" class="col-sm-2 control-label">Last Name</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" id="lastName" placeholder="Last Name" ng-model="user.lastname">
+                  <input type="text" class="form-control" id="lastName" placeholder="Last Name" ng-model="user.lastName">
                 </div>
               </div>
               <div class="form-group">
