--- a/public/Project/client/views/header/header.view.html
+++ b/public/Project/client/views/header/header.view.html
@@ -14,6 +14,7 @@
                 <li><a href="#/register" class="btn" ng-class="{'btn-primary' : $location.url() == '/register'}">Register</a></li>
                 <li><a href="#/login" class="btn" ng-class="{'btn-primary': $location.url() == '/login'}">Login</a></li>
                 <li><a href="#/profile" class="btn" ng-class="{'btn-primary': $location.url() == '/profile'}">Profile</a></li>
+                <li><a href="#/recordRoute" class="btn" ng-class="{'btn-primary': $location.url() == '/recordRoute'}">Record a Route</a></li>
             </ul>
         </div>
     </div>
