--- a/public/Project/client/views/home/home.view.html
+++ b/public/Project/client/views/home/home.view.html
@@ -1,25 +1,69 @@
-<h1 class="page-header" style="text-align: center">BikeRoutes.com</h1>
-<div class="container">
-    <div class="row">
-        <form class="form-horizontal" ng-controller="LoginController">
-            <div class="form-group">
+<div ng-controller="SearchController">
+    <h1 class="page-header" style="text-align: center">BikeRoutes.com</h1>
+    <div class="container">
+            <form class="form-horizontal" >
+                <div class="form-group">
 
-                <div class="col-sm-10 col-lg-3 col-lg-offset-4">
-                    <input type="text" class="form-control" id="username" placeholder="Username" ng-model="username">
-                </div>
-            </div>
-            <div class="form-group">
+                        <div class="col-md-12 row">
+                            <h2 style="text-align: center">Search</h2>
+                            <div class="col-md-2"></div>
+                            <div class="col-md-8">
+                                <div class="col-md-6">
+                                    <input type="text" class="form-control" id="source" placeholder="Source*" ng-model="source">
+                                </div>
+                                <div class="col-md-6">
+                                    <input type="text" class="form-control" id="dest" placeholder="Destination" ng-model="dest">
+                                </div>
+                            </div>
+                            <div class="col-md-2"></div>
+                        </div>
+                        <div class="col-md-12 row" style="margin-top: 15px;">
+                            <div class="col-md-2"></div>
+                            <div class="col-md-8">
+                                <div class="col-md-6">
+                                    <select class="form-control" id="terrain" ng-model="route.terrain">
+                                        <option label=" "></option>
+                                        <option value="road">Roads</option>
+                                        <option value="intermediate">Intermediate</option>
+                                        <option value="offroad">Offroad only</option>
+                                        <option value="path">Bike Path</option>
+                                    </select>
+                                </div>
+                                <div class="col-md-6">
+                                    <select class="form-control" id="difficulty" ng-model="route.difficulty">
+                                        <option label=" "></option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-md-2"></div>
+                        </div>
 
-                <div class="col-sm-10 col-lg-3 col-lg-offset-4">
-                    <input type="password" class="form-control" id="password" placeholder="Password" ng-model="password">
                 </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-10 col-md-offset-4 col-lg-offset-5">
-                    <a type="login" class="btn btn-default" ng-click="login()">Login</a>
+                <div class="col-md-12 row" style="margin-top: 15px;">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8">
+                        <a type="login" class="btn btn-default col-lg-2 col-lg-offset-5" ng-click="search()">Search</a>
+                    </div>
                 </div>
-            </div>
-        </form>
+
+            </form>
+
+
     </div>
 
+
+
+    <div class="col-md-12 row" style="margin-top: 15px;">
+        <div ng-repeat="route in routes" class="col-md-12 row" style="margin-top: 15px;">
+            <hr>
+            <h2>
+                <a ng-click="navigate($index)">{{route.source}} to {{route.dest}}</a>
+            </h2>
+        </div>
+    </div>
 </div>
