--- a/public/Project/client/views/RouteRecorder/record.view.html
+++ b/public/Project/client/views/RouteRecorder/record.view.html
@@ -43,7 +43,19 @@
 
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-12 col-lg-6">
-                    <a type="login" class="btn btn-danger" ng-click="record()" style="color: #ffffff">Record Route</a>
+                    <a type="login" class="btn btn-danger" ng-click="record()" style="color: #ffffff">Submit Route</a>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-12 col-lg-6">
+                    <a type="login" class="btn btn-danger" onclick="autoRecord()" style="color: #ffffff">Auto Record Route</a>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-12 col-lg-6">
+                    <a type="login" class="btn btn-danger" onclick="stopWatching()" style="color: #ffffff">Stop Recording</a>
                 </div>
             </div>
 
