--- a/public/Project/client/views/results/results.view.html
+++ b/public/Project/client/views/results/results.view.html
@@ -7,10 +7,54 @@
 <div class="col-md-12 row">
     <div id="map" class="col-lg-12 col-md-12 col-sm-12" style="height: 600px"></div>
 </div>
-<div class="col-md-12 row" style="text-align: center">
-    <h2>Terrain: {{route.terrain}}</h2>
-    <h2>Difficulty: {{route.difficulty}}/5</h2>
+
+<div class="col-md-12 row">
     <hr>
+</div>
+
+<div class="col-md-12 row">
+    <div class="col-lg-12 col-md-12">
+        <div class="panel panel-primary" style="border-color: darkgreen">
+            <div class="panel-heading" style="background-color: darkgreen">
+                <h3 class="panel-title" style="text-align: center">Route from {{route.source}} to {{route.dest}} by {{route.user.username}}</h3>
+            </div>
+            <div class="panel-body">
+                <div>
+                    Description: {{route.description}}
+                </div>
+                <div>
+                    Terrain: {{route.terrain}}
+                </div>
+                <div>
+                    Difficulty: {{route.difficulty}}/5
+                </div>
+
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="col-md-12 row">
+    <hr>
+    <form class="form-horizontal">
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="comment" placeholder="Leave a Comment" ng-model="comment">
+        </div>
+        <div class="form-group">
+            <a type="login" class="btn btn-default" ng-click="comment()">Submit</a>
+        </div>
+    </form>
+</div>
+
+<div class="col-md-12 row">
+    <div class="col-md-12 row" style="font-size: smaller">
+        <hr>
+        COMMENT HERE
+    </div>
+    <div class="col-md-12 row" style="font-size: x-small">
+        AUTHOR
+    </div>
 
 </div>
 
