--- a/public/Project/client/views/RouteRecorder/record.view.html
+++ b/public/Project/client/views/RouteRecorder/record.view.html
@@ -1,23 +1,24 @@
 <h1 class="page-header" style="text-align: center">Create a Route</h1>
 <div class="container">
     <div class="row">
-        <div id="map" class="col-lg-12 col-md-12 col-sm-12" style="height: 600px"></div>
+        <div id="map" class="col-lg-12 col-md-10 col-sm-10" style="height: 600px"></div>
     </div>
     <div class="row">
         <form class="form-horizontal col-lg-offset-1" ng-controller="RecordController" style="padding-top: 1cm">
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-12 col-lg-8">
                     <a type="login" id="autoRecord" class="btn btn-danger" onclick="autoRecord()" style="color: #ffffff">Auto Record Route</a>
+                    <span style="font-size: x-small;">Alternatively, click the map</span>
                 </div>
             </div>
             <div class="form-group">
-                <label for="source" class="col-sm-2 control-label">Source</label>
+                <label for="source" class="col-sm-2 control-label">Source*</label>
                 <div class="col-sm-10 col-lg-6">
                     <input type="text" class="form-control" id="source" placeholder="Starting Location" ng-model="route.source">
                 </div>
             </div>
             <div class="form-group">
-                <label for="dest" class="col-sm-2 control-label">Destination</label>
+                <label for="dest" class="col-sm-2 control-label">Destination*</label>
                 <div class="col-sm-10 col-lg-6">
                     <input type="text" class="form-control" id="dest" placeholder="Destination" ng-model="route.dest">
                 </div>
