--- a/public/Project/client/views/header/header.view.html
+++ b/public/Project/client/views/header/header.view.html
@@ -15,6 +15,8 @@
                 <li><a href="#/login" class="btn" ng-class="{'btn-primary': $location.url() == '/login'}">Login</a></li>
                 <li><a href="#/profile" class="btn" ng-class="{'btn-primary': $location.url() == '/profile'}">Profile</a></li>
                 <li><a href="#/recordRoute" class="btn" ng-class="{'btn-primary': $location.url() == '/recordRoute'}">Record a Route</a></li>
+                <li><a href="https://docs.google.com/document/d/1GmJPzg0WeXWDYa78Wayc8GAvPVHPkVnFXHnwr3WeBp0/edit?usp=sharing" class="btn">Documentation</a></li>
+
             </ul>
         </div>
     </div>
