--- a/public/Project/client/views/results/results.view.html
+++ b/public/Project/client/views/results/results.view.html
@@ -20,9 +20,6 @@
             </div>
             <div class="panel-body">
                 <div>
-                    Description: {{route.description}}
-                </div>
-                <div>
                     Terrain: {{route.terrain}}
                 </div>
                 <div>
@@ -39,7 +36,7 @@
     <hr>
     <form class="form-horizontal">
         <div class="col-sm-10">
-            <input type="text" class="form-control" id="comment" placeholder="Leave a Comment" ng-model="comment">
+            <input type="text" class="form-control" id="comment" placeholder="Leave a Comment" ng-model="r.comment">
         </div>
         <div class="form-group">
             <a type="login" class="btn btn-default" ng-click="comment()">Submit</a>
@@ -47,13 +44,13 @@
     </form>
 </div>
 
-<div class="col-md-12 row">
+<div class="col-md-12 row" ng-repeat="comment in route.comments">
     <div class="col-md-12 row" style="font-size: smaller">
         <hr>
-        COMMENT HERE
+        {{comment.comment}}
     </div>
     <div class="col-md-12 row" style="font-size: x-small">
-        AUTHOR
+        {{comment.username}}
     </div>
 
 </div>
